--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -13,3 +13,6 @@
 @import "../sass/navbar.scss";
 @import "../sass/masthead.scss";
 @import "../sass/portfolio.scss";
+@import "../sass/section1";
+@import "../sass/section2";
+@import "../sass/page";
