--- a/src/sass/_page.scss
+++ b/src/sass/_page.scss
@@ -3,7 +3,7 @@ header.page {
   background: linear-gradient(
       to bottom,
       #{fade-out($green, 0.2)} 0%,
-      #{fade-out($green, 0.2)} 100%
+      #{fade-out($purple, 0.2)} 100%
     ),
     url("../images/bg1.jpg");
 }
