--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -1,12 +1,13 @@
 // Base styling for the navbar
 #mainNav {
   box-shadow: $box-shadow;
-  background-color: $white;
+  background-color: rgba(156, 113, 255, 0.411);
   transition: background-color 0.2s ease;
   .navbar-brand {
     font-family: $font-family-sans-serif;
     font-weight: $font-weight-bold;
-    color: $gray-900;
+    color: fade-out($white, 0.3);
+    text-shadow: 2px 2px black;
   }
   .navbar-nav {
     .nav-item {
@@ -17,7 +18,8 @@
       }
 
       .nav-link {
-        color: $gray-600;
+        color: fade-out($white, 0.3);
+        text-shadow: 1px 1px black;
         font-family: $font-family-sans-serif;
         font-weight: $font-weight-bold;
         font-size: 0.9rem;
@@ -64,7 +66,7 @@
     box-shadow: $box-shadow;
     background-color: rgba(156, 113, 255, 0.411);
     .navbar-brand {
-      color: $gray-900;
+      color: fade-out($white, 0.3);
       &:hover {
         color: white;
       }
@@ -72,7 +74,7 @@
     .navbar-nav {
       .nav-item {
         .nav-link {
-          color: $gray-900;
+          color: fade-out($white, 0.3);
           &:hover {
             color: white;
           }
