--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -8,6 +8,7 @@
     font-weight: $font-weight-bold;
     color: fade-out($white, 0.3);
     text-shadow: 2px 2px black;
+    font-size: 16px;
   }
   .navbar-nav {
     .nav-item {
